# chicandoit

./: .disable-rust-lint  .env.example  .gitignore  .lintignore  CHANGELOG.md  CLAUDE.md  CONTENT_OPTIMIZATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  PROJECT_BRIEF.md  PROJECT_SPEC.md  PUSH_INSTRUCTIONS.md  README.md  TASK_TRACKER.md  UI_ENHANCEMENTS.md  next.config.js  package.json  push-large-commit.sh  setup.bat  setup.sh  tailwind.config.js  types.ts
.cargo/: config.toml
.claude/agents/: README.md  content-optimizer.md  landing-page-optimizer.md  performance-optimizer.md  seo-specialist.md  ui-enhancer.md
app/: globals.css  layout.tsx  manifest.ts  page.tsx  robots.ts  sitemap.ts
app/components/: DemoSection.tsx  ErrorBoundary.tsx  ExportImportButtons.tsx  FAQSection.tsx  FeatureCard.tsx  LazyWrapper.tsx  LoadingSpinner.tsx  Logo.tsx  Navbar.tsx  Navigation.tsx  OnboardingTips.tsx  OptimizedImage.tsx  PerformanceMonitor.tsx  TaskForm.tsx  TaskItem.tsx  ThemeToggle.tsx  Tooltip.tsx  WebVitals.tsx  WebVitalsTracker.tsx
app/constants/: copy.ts
app/dashboard/: layout.tsx  page.tsx
app/features/: page.tsx
app/hooks/: useCache.ts  useDragAndDrop.ts  (+6 more)
components/: AIInsights.tsx  CommunicationPanel.tsx  NotificationCenter.tsx  ProgressDashboard.tsx  SettingsPanel.tsx  TaskManager.tsx
src/: index.css
src-backup/: App.js  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ai_engine.rs  commands.rs  communication.rs  database.rs  main.rs  models.rs  notifications.rs  system_tray.rs
(+14 files in other folders)
